--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     container_name: mysql
     volumes:
       - go_mysql_data:/var/lib/mysql
+      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     environment:
       MYSQL_DATABASE: sample_db
       MYSQL_USER: user
